Modificacion del pom